--- a/config.ini
+++ b/config.ini
@@ -2,3 +2,17 @@
 
 filein=0551283IN.txt
 fileout=0551283OUT.txt
+
+
+[inifile]
+filein=0551283IN.ini
+fileout=0551283OUT.ini
+
+
+[txtfile]
+filein=0551283IN.txt
+fileout=0551283OUT.txt
+
+
+[conf]
+filetype=ini
